welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:3: error: '(' expected but 'true' found.
while true {
      ^Poucet:18: error: illegal start of simple expression
	}
        ^