welcome.lessons.welcome.loopdowhile.Poucet1.scala.code
var biscuit =0
var compteur =0
while true {
  for (compteur <- 1 to 5){
    avance()
    if (estSurBiscuit()){
    biscuit = biscuit +1
  }
  }
  if (biscuit>3){
    gauche()
  }
  if (biscuit<2){
    droite()
  }
}